# gnome-abrt

./: .gitignore  .packit.yml  CONTRIBUTING.md  Makefile.am  README.md  REQUIRES.txt  autogen.sh  configure.ac  gen-version  gnome-abrt.pc.in  gnome-abrt.spec  gnome-abrt.spec.in  meson.build  meson_options.txt  pylintrc  runpylint.sh  zanata.xml
.github/workflows/: codeql.yml  lint.yml
.tito/custom/abrt/tagger/: __init__.py
.tx/: config
data/: Makefile.am  meson.build  org.freedesktop.GnomeAbrt.gresource.xml
data/css/: oops.css
data/ui/: oops-menus.ui  oops-window.ui
doc/: Makefile.am  asciidoc.conf  gnome-abrt.txt  meson.build
icons/: Makefile.am  meson.build
po/: LINGUAS  Makevars  POTFILES.in  af.po  ar  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  cs_CZ.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gnome-abrt.pot  gu.po  he.po  hi.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kab.po  (+36 more)
src/: Makefile.am  __init__.py  application.py  config.py  controller.py  dbus_problems.py  directory_problems.py  errors.py  gnome-abrt  gnome-abrt.appdata.xml.in  gnome-abrt.desktop.in  l10n.py  meson.build  oops.glade  oops.py  org.freedesktop.GnomeAbrt.appdata.xml.in  org.freedesktop.GnomeAbrt.desktop.in  org.freedesktop.GnomeAbrt.metainfo.xml.in  problems.py  test.py  tools.py  views.py
src/gnome_abrt/: Makefile.am  __init__.py  __init__.py.in  application.py  config.py  controller.py  controller.py.in  dbus_problems.py  desktop.py  dialogs.py  directory_problems.py  errors.py  l10n.py  meson.build  oops.glade  problems.py  signals.py  tools.py  views.py
src/gnome_abrt/url/: Makefile.am  __init__.py  gliburltitle.py  meson.build  urltitle.py
src/gnome_abrt/wrappers/: Makefile.am  __init__.py  common.h  configure.c  meson.build  module.c  problem_app.c  problem_details.c  xserver_check.c
test/: fake_app_dbus_service
